# Book_App

./: .gitignore  README.md  package-lock.json  package.json  vite.config.js
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  main.rs
src/js/: app.js  translations.js
src/js/modules/: api.js  books.js  events.js  modals.js  state.js  translations.js  ui.js
src/styles/: main.css
